Fixed bug #29883 (isset gives invalid values on strings).